# plasticity

./: .bazelrc  BUILD  BUILD.sdl2  LICENSE  README.md  WORKSPACE  meson.build
codegen/: BUILD  codegen.cc  codegen.h  codegen_test.cc  codegen_util.cc  codegen_util.h
compute/: BUILD  buffer.h  cl_buffer.cc  cl_buffer.h  cl_buffer_test.cc  cl_command_queue.cc  cl_command_queue.h  command_queue.h
filter/: BUILD  ekf.h  kalman.h  kalman_filter.cc  kalman_filter.h  kalman_filter_test.cc  run.sh  simple_imu_test.cc
geometry/: BUILD  dynamic_matrix.h  dynamic_matrix_test.cc  matrix.h  matrix4.cc  matrix4.h  matrix_test.cc  types.h  vector.cc  vector.h
memory/: BUILD  buffer.h  cl_buffer.cc  cl_buffer.h  cl_buffer_test.cc
nnet/: BUILD  activation_layer.cc  activation_layer.h  architecture.h  cifar_test.cc  circle_test.cc  convolution_layer.cc  convolution_layer.h  dense_layer.cc  dense_layer.h  error_layer.cc  error_layer.h  feed_forward_layer.cc  feed_forward_layer.h  layer.cc  layer.h  layer_dimensions.cc  layer_dimensions.h  layer_impl.cc  layer_impl.h  license.txt  max_pool_layer.cc  max_pool_layer.h  nnet.h  nnet_demo.cc  nnet_test.cc  plot.py  pseudocode.txt  softmax_layer.cc  softmax_layer.h  symbol_generator.cc  symbol_generator.h  yolov1.cc  yolov1.h
nnet/cifar_results/: weights.json
nnet/data/: BUILD  cifar-10-binary-layout.readme  fetch-cifar-data.sh
nnet/extras/: example_kernel.cc
nnet/kernels/: back_prop.kernel.cl  combine.kernel.cl  error.kernel.cl  evaluate.kernel.cl  gradient_descent.kernel.cl
nnet/tools/: plot.py
stats/: BUILD  normal.h
symbolic/: BUILD  expression.cc  expression.h  expression_node.h  integer.cc  integer.h  numeric_value.cc  numeric_value.h  simple_test.cc  symbolic_test.cc  symbolic_util.cc  symbolic_util.h
